export enum LEVEL {
  EASY = 0,
  MEDIUM,
  HARD,
}

export const storage = {
  REFRESH_TOKEN: 'refresh-token',
  ACCESS_TOKEN: 'access-token',
};

export const fonts = {
  bebas: 'Bebas Neue Regular',
  lato: 'Lato',
};

export const fields = {
  enter_name: 'Enter user name',
  enter_password: 'Enter password',
};

export const actions = {
  login: 'Login',
};

export const validations = {
  MIN_NAME_LEN: 5,
  MIN_PASSWORD_LEN: 6,
};
